prevent appointment buttons causing overflow. fixes #34

--- a/src/chat/chat-override.css
+++ b/src/chat/chat-override.css
@@ -505,6 +505,8 @@
   }
   .buttons-mobile button {
     margin: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .main-page, .content-area .container {
